# claude-code-swapper

./: README.md  pyproject.toml
claude_code_swapper/: config.example.yaml  main.py
docs/superpowers/plans/: 2026-04-16-claude-code-swapper.md
docs/superpowers/specs/: 2026-04-16-claude-code-swapper-design.md
tests/: test_main.py
