[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-code-swapper"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "questionary>=2.0",
    "pyyaml>=6.0",
]

[project.scripts]
claude-code-swapper = "claude_code_swapper.main:main"

[tool.hatch.build.targets.wheel]
packages = ["claude_code_swapper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
